🐛 Fix: 解决因组件溢出导致窗口底部出现滚动条

--- a/src/render/styles/global.css
+++ b/src/render/styles/global.css
@@ -2,6 +2,10 @@ html, body, #app {
 	height: 100%;
 }
 
+body{
+	overflow: hidden;
+}
+
 /* Set the default font family */
 :root {
 	font-family: 'Microsoft PhagsPa', sans-serif;
